--- a/system_properties/classes.ipynb
+++ b/system_properties/classes.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# System Properties\n",
     "\n",
-    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Comunications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
+    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Communications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
    ]
   },
   {
@@ -53,7 +53,7 @@
     "\\varphi(j \\omega) &= - \\varphi(-j \\omega)\n",
     "\\end{align}\n",
     "\n",
-    "Due to these symmetries often only the positive part $\\omega \\geq 0$ of the magnitude spectrum and phase are plotted. Note that such a representation is ambiguous without the additional knowledge that the system is real-valued.\n",
+    "Due to these symmetry relations often only the positive part $\\omega \\geq 0$ of the magnitude spectrum and phase are plotted. Note that such a representation is ambiguous without the additional knowledge that the system is real-valued.\n",
     "\n",
     "Real-valued systems are of paramount importance in practical applications, since physically existing signals are real-valued. The symmetry relations derived above have to be considered when designing real-valued systems in the spectral domain."
    ]
@@ -146,7 +146,7 @@
     "h(t) = \\frac{1}{2 \\pi} \\text{sinc}^2 \\left( \\frac{t - c}{2} \\right)\n",
     "\\end{equation}\n",
     "\n",
-    "It is straightforward to show that the impulse response fulfills the properties derived above. For illustration, the impulse response is plotted for $c=5$"
+    "It is straightforward to show that the impulse response fulfills the properties stated above. For illustration, the impulse response is plotted for $c=5$"
    ]
   },
   {
@@ -238,7 +238,7 @@
     "H_\\text{NMPS}(j \\omega) = \\frac{(j \\omega + s_0^*)(j \\omega + s_0)}{j \\omega - s_\\infty}\n",
     "\\end{equation}\n",
     "\n",
-    "The magnitude response and group delay for both systems is computed and plotted for $s_\\infty = -2 $ and $s_0 = - 1 + j$. First the transfer functions are defined and the group delays are computed"
+    "The magnitude response and group delay for both systems is computed and plotted for $s_\\infty = -2$ and $s_0 = - 1 + j$. First the transfer functions are defined and the group delays are computed"
    ]
   },
   {
@@ -315,8 +315,7 @@
    "source": [
     "### All-Pass\n",
     "\n",
-    "An [all-pass](https://en.wikipedia.org/wiki/All-pass_filter) is a system with constant magnitude response $|H(j \\omega)| = H_0$ but frequency dependent phase $\\varphi_\\text{H}(j \\omega)$. It allows to modify the phase of a signal without modifying its magnitude. The [distortionless system](#Distortionless-System) is a special case of an all-pass with $\\varphi_\\text{H}(j \\omega) = - \\omega \\tau$. A stable system with rational transfer function $H(s)$ is an all-pass\n",
-    "if for each pole in the left $s$-half-plane there exists a zero mirrored at the imaginary axis $\\Re \\{ s \\} = 0$.\n",
+    "An [all-pass](https://en.wikipedia.org/wiki/All-pass_filter) is a system with constant magnitude response $|H(j \\omega)| = H_0$ but frequency dependent phase $\\varphi_\\text{H}(j \\omega)$. It allows to modify the phase of a signal without modifying its magnitude. The [distortionless system](#Distortionless-System) is a special case of an all-pass with $\\varphi_\\text{H}(j \\omega) = - \\omega \\tau$. A stable system with rational transfer function $H(s)$ is an all-pass iff for each pole in the left $s$-half-plane there exists a zero in the right $s$-half-plane which is mirrored at the imaginary axis $\\Re \\{ s \\} = 0$.\n",
     "\n",
     "The magnitude response $|H(j \\omega)|$ of a system $H(s)$ in dependence of its poles and zeros has already been derived above as \n",
     "\n",
@@ -421,9 +420,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
