--- a/system_properties/idealized_systems.ipynb
+++ b/system_properties/idealized_systems.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# System Properties\n",
     "\n",
-    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Comunications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
+    "*This Jupyter notebook is part of a [collection of notebooks](../index.ipynb) in the bachelors module Signals and Systems, Communications Engineering, Universität Rostock. Please direct questions and suggestions to [Sascha.Spors@uni-rostock.de](mailto:Sascha.Spors@uni-rostock.de).*"
    ]
   },
   {
@@ -38,7 +38,7 @@
     "h(t) = \\frac{\\omega_\\text{c}}{\\pi} \\cdot \\text{sinc} ( \\omega_\\text{c} t )\n",
     "\\end{equation}\n",
     "\n",
-    "Since the impulse response is an acausal signal, the ideal low-pass is an [acausal system](causality_stability.ipynb#Condition-for-the-Impulse-Response). The sinc-function is furthermore not absolutely integrable. Hence the ideal-low pass is not a [stable system](causality_stability.ipynb#Condition-for-the-Impulse-Response) in the sense of the bounded-input bounded-output (BIBO) criterion. In conclusion, the ideal low-pass in not a realizable system. The ideal low-pass can only be approximated in practical systems. It plays nevertheless an important role in the foundations of sampling and interpolation."
+    "Since the impulse response is an acausal signal, the ideal low-pass is an [acausal system](causality_stability.ipynb#Condition-for-the-Impulse-Response). The sinc-function is furthermore not absolutely integrable. Hence the ideal-low pass is not a [stable system](causality_stability.ipynb#Condition-for-the-Impulse-Response) in the sense of the bounded-input bounded-output (BIBO) criterion. In conclusion, the ideal low-pass is not realizable. It can only be approximated in practical systems. It plays nevertheless an important role in the foundations of sampling and interpolation."
    ]
   },
   {
@@ -192,7 +192,7 @@
     "h(t) = \\delta(t) - \\pi \\Delta \\omega \\cdot \\text{sinc} ( \\frac{\\Delta \\omega}{2} t ) \\cdot \\cos(\\omega_\\text{c} t)\n",
     "\\end{equation}\n",
     "\n",
-    "Due to its relation to the ideal band-pass, the ideal band-stop is neither causal nor stable. The ideal band-stop can only be approximated in practical realizations. The ideal band-stop is for instance used to remove undesired signal components."
+    "Due to its relation to the ideal band-pass, the ideal band-stop is neither causal nor stable. The ideal band-stop can only be approximated in practical realizations. The ideal band-stop is for instance used to remove undesired signal components, e.g. [mains hum](https://en.wikipedia.org/wiki/Mains_hum)."
    ]
   },
   {
@@ -223,9 +223,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
